--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta charset="UTF-8">
     <title>Project: Landing Page</title>
     <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -14,9 +15,12 @@
     <div class="section" id="one">
         <div class="header">
             <h1>Header Logo</h1>
-            <a>header link one</a>
-            <a>header link two</a>
-            <a>header link three</a>
+
+            <div class="link">
+                <a>header link one</a>
+                <a>header link two</a>
+                <a>header link three</a>
+            </div>
         </div>
 
         <div class="signup">
