--- a/index.html
+++ b/index.html
@@ -41,19 +41,19 @@
 
         <div class="content">
             <div class="sub-content">
-                <div class="image-box">img</div>
+                <div class="image-box"></div>
                 <div class="text">this is some subtext under an illustration or image</div>
             </div>
             <div class="sub-content">
-                <div class="image-box">img</div>
+                <div class="image-box"></div>
                 <div class="text">this is some subtext under an illustration or image</div>
             </div>
             <div class="sub-content">
-                <div class="image-box">img</div>
+                <div class="image-box"> <img src="./Resonator_Shorekeeper.png" alt="shorekeeper"> </div>
                 <div class="text">this is some subtext under an illustration or image</div>
             </div>
             <div class="sub-content">
-                <div class="image-box">img</div>
+                <div class="image-box"></div>
                 <div class="text">this is some subtext under an illustration or image</div>
             </div>
         </div>
