--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <div class="container">
             <div class="text">
                 <h3>Call to action! It's time!</h3>
-                <h5>Sign up for our product by clicking that button right over there<h5>
+                <p>Sign up for our product by clicking that button right over there<p>
             </div>
 
             <button>Sign up</button>
