--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <div class="text">this is some subtext under an illustration or image</div>
             </div>
             <div class="sub-content">
-                <div class="image-box"> <img src="./Resonator_Shorekeeper.png" alt="shorekeeper"> </div>
+                <div class="image-box"></div>
                 <div class="text">this is some subtext under an illustration or image</div>
             </div>
             <div class="sub-content">
@@ -81,7 +81,7 @@
     </div>
 
     <div class="section" id="five">
-        <h6>Copyright © The Odin project 2021</h6>
+        <p>Copyright © The Odin project 2021</h6>
     </div>
 
 </body>
